# Rapuri-app

./: .dockerignore  .gitignore  api.ts  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/ramen_log/: models.py  serializers.py  tests.py  views.py
backend/ramen_log/migrations/: 0001_initial.py  0002_initial.py  0003_ramenlog_soup_richness.py
backend/ramen_project/: settings.py  urls.py
backend/user_relationships/migrations/: 0001_initial.py  0002_initial.py
backend/users/migrations/: 0001_initial.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/(review)/: index.tsx
frontend/components/ui/: IconSymbol.tsx
