[tool.poetry]
name = "ramen-project"
version = "0.1.0"
description = "Backend for the Rapuri app"
authors = ["er3510753 <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
